--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
@@ -53,7 +48,17 @@ and open the template in the editor.
         <script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript">
-
+            
+            var url = '';
+            
+            $('button[id*="btn_"]').click(function() {
+                url= "http://localhost:8080/" + $(this).attr('id').split("_")[1];
+            });
+            
+            $('#ok_confirm').click(function() {
+                document.location.href = url;
+            });
+            
             $(function () {
                 $('[data-toggle="popover"]').popover();
             });
